--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
 Django==5.1.3
 django-environ==0.11.2
 djangorestframework==3.15.2
+googlemaps==4.10.0
 gunicorn==23.0.0
+idna==3.10
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
 pytz==2024.2
+requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
 tzdata==2024.2
+urllib3==2.2.3
 whitenoise==6.8.2
